[package]
name = "termusic"
description = "Terminal Music and Podcast Player written in Rust. Can download music from youtube(netease/migu/kugou) and then embed lyrics and album photos into mp3/m4a/flac/wav/ogg vorbis files."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true


[[bin]]
name = "termusic"
path = "src/main.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true
termusic-playback.workspace = true # = {path = "playback/"}
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
dirs.workspace = true
id3.workspace = true # = "1"
image.workspace = true # = "0.24"
include_dir.workspace = true # = "0.7"
lazy_static.workspace = true # = "1.4"
log.workspace = true # = "0.4"
flexi_logger.workspace = true
colored.workspace = true
lofty.workspace = true #  = "0.12"
rand.workspace = true #  = "0.8"
regex.workspace = true #  = "^1.5.5"
serde_json.workspace = true #  = "1.0"
shellexpand.workspace = true #  = "3"
sysinfo.workspace = true
tuirealm.workspace = true #   = { version = "1", features = ["serialize"] }
tui-realm-stdlib.workspace = true #   = "1"
tui-realm-treeview.workspace = true #   = "1"
unicode-width.workspace = true #   = "^0.1.8"
viuer.workspace = true
ytd-rs.workspace = true #   = { version = "0.1", features = ["yt-dlp"]}
walkdir.workspace = true #   = "2"
wildmatch.workspace = true #   = "2"
escaper.workspace = true #   = "0.1.1"
textwrap.workspace = true #   = "0.16"
sanitize-filename.workspace = true #   = "0.4"
percent-encoding.workspace = true #   = "2.2"
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
alphanumeric-sort.workspace = true


[features]
# enable all cover features by default that do not require system interfaces / extra dependencies
default = ["cover-viuer-iterm", "cover-viuer-kitty"]
# enable all terminal cover printers
cover = ["cover-ueberzug", "cover-viuer"]
cover-ueberzug = []
# enable all viuer protocols
cover-viuer = ["cover-viuer-iterm", "cover-viuer-kitty", "cover-viuer-sixel"]
cover-viuer-iterm = []
cover-viuer-kitty = []
cover-viuer-sixel = ["viuer/sixel"]

[dev-dependencies]
pretty_assertions.workspace = true # = "1"
# anyhow = "1"
# hound = "3.4"
# ringbuf = "0.3"
# clap = { version = "3.1", default-features = false, features = ["std"] }

[lints]
workspace = true
