[package]
name = "termusic"
description = "Terminal Music and Podcast Player written in Rust. Can download music from youtube(netease/migu/kugou) and then embed lyrics and album photos into mp3/m4a/flac/wav/ogg vorbis files."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true


[[bin]]
name = "termusic"
path = "src/main.rs"
doctest = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
termusic-lib.workspace = true
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
ctrlc.workspace = true
dirs.workspace = true
id3.workspace = true
image.workspace = true
include_dir.workspace = true
log.workspace = true
flexi_logger.workspace = true
colored.workspace = true
lofty.workspace = true
rand.workspace = true
regex.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
shell-words.workspace = true
sysinfo.workspace = true
tuirealm.workspace = true
tui-realm-stdlib.workspace = true
tuirealm-orx-tree.workspace = true
unicode-width.workspace = true
viuer.workspace = true
ytd-rs.workspace = true
walkdir.workspace = true
wildmatch.workspace = true
escaper.workspace = true
textwrap.workspace = true
sanitize-filename.workspace = true
percent-encoding.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
alphanumeric-sort.workspace = true
pathdiff.workspace = true
either.workspace = true
lru.workspace = true
mime_guess.workspace = true
pinyin.workspace = true

[target.'cfg(windows)'.dependencies]
# required for setting "DETACHED_PROCESS" for spawning the server
# without using magic or custom numbers
windows = { workspace = true, features = ["Win32_System_Threading"] }

[features]
# enable all cover features by default that do not require system interfaces / extra dependencies
default = ["cover-viuer-iterm", "cover-viuer-kitty"]
# enable all terminal cover printers
cover = ["cover-ueberzug", "cover-viuer"]
cover-ueberzug = []
# enable all viuer protocols
cover-viuer = ["cover-viuer-iterm", "cover-viuer-kitty", "cover-viuer-sixel"]
cover-viuer-iterm = []
cover-viuer-kitty = []
cover-viuer-sixel = ["viuer/icy_sixel"]

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-linux.tar.xz"
bin-dir = "{ name }-v{ version }-x86_64-linux/{ bin }{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-linux.tar.xz"
bin-dir = "{ name }-v{ version }-x86_64-linux/{ bin }{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-macos.tar.xz"
bin-dir = "{ name }-v{ version }-x86_64-macos/{ bin }{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-windows.zip"
bin-dir = "{ name }-v{ version }-x86_64-windows/{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
