[package]
name = "ogg_pager"
version = "0.1.7"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/Serial-ATA/lofty-rs"
description = "OGG page reader for use in Lofty"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.4.3"
